# shop_tech

./: .env.example  .gitignore  README.md  docker-compose.yaml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: admin.py  cars.py  login.py
backend/app/database/: database.py
backend/app/models/: user.py
backend/app/schemas/: admin.py  car.py  models.py  user.py
backend/app/site/: index.html
backend/app/utils/: security.py
frontend/: Dockerfile  admin.html  cars.html  cart.html  index.html  nginx.conf  user.html
frontend/static/: admin.js  app.js  auth.js  cars.js  cart.js  nav.js  styles.css  user.js
