[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi>=0.129.0",
    "passlib>=1.7.4",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.34",
    "uvicorn>=0.41.0",
]
